@@ -1,3 +1,8 @@
+2004-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/audioconvert/gstaudioconvert.c: (_fixate_caps_to_int):
+          refactor/comment code
+
 2004-05-02  Ronald Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/asfdemux/Makefile.am:
